# pico-xor

./: .gitignore  README.md
PicoML/: .gitignore  XOR.ipynb  XOR_part3.ipynb  XOR_visualization.ipynb  requirements-macos.txt  requirements.txt  start_tensorboard.sh
pico-tflmicro/: .gitignore  CMakeLists.txt
pico-tflmicro/examples/xor/: CMakeLists.txt  main.cpp  main_functions.cpp  main_functions.h  model.cpp  model.h
